[gd_scene load_steps=2 format=3 uid="uid://cyy6u8mpf4ld5"]

[ext_resource type="Script" path="res://src/main/panels/setting_panel/eraser_setting.gd" id="1_nw7q0"]

[node name="EraserSetting" type="MarginContainer"]
offset_right = 243.0
offset_bottom = 172.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_nw7q0")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Shape:"

[node name="EraserShape" type="OptionButton" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Size:"

[node name="EraserSize" type="SpinBox" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
value = 2.0

[connection signal="item_selected" from="GridContainer/EraserShape" to="." method="_on_eraser_shape_item_selected"]
[connection signal="value_changed" from="GridContainer/EraserSize" to="." method="_on_eraser_size_value_changed"]
